# ChatRedactle

./: README.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/lists/: Movies  Szwagi's List  Video Games
src-tauri/src/: main.rs
